--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="Keywords" content="rpG,Mcayear,租赁服">
 		<meta name="Description" content="rpG租赁服官网">
-		<meta http-equiv="refresh" content="5;url=http://148.70.228.202"> 
+		<meta http-equiv="refresh" content="5;url=http://a.aabb.ga"> 
 		<meta charset="UTF-8">
 	</head>
 	<body>
