--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	</head>
 	<body>
 		<h1>页面跳转</h1>
-		<h2 style="color=red;">页面会在3秒后重定向至<i>rpG官网</i>你也可以<a href="http://148.70.228.202">立即前往</a>.<h2>
+		<h2 style="color=red;">页面会在3秒后重定向至<i>rpG官网</i>你也可以<a href="http://a.aabb.ga">立即前往</a>.<h2>
 	</body>
 </html>
