--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 	<head>
 		<meta name="Keywords" content="rpG,Mcayear,租赁服">
 		<meta name="Description" content="rpG租赁服官网">
-		<meta http-equiv="refresh" content="5;url=http://a.aabb.ga"> 
+		<meta http-equiv="refresh" content="3;url=http://mcnian.cn"> 
 		<meta charset="UTF-8">
 	</head>
 	<body>
 		<h1>页面跳转</h1>
-		<h2 style="color=red;">页面会在3秒后重定向至<i>rpG官网</i>你也可以<a href="http://a.aabb.ga">立即前往</a>.<h2>
+		<h2 style="color=red;">页面会在3秒后重定向至<i>rpG官网</i>你也可以<a href="http://mcnian.cn">立即前往</a>.<h2>
 	</body>
 </html>
